# thrust2020

./: .gitignore  .gitmodules  CMakeLists.txt  Camera.cpp  Camera.h  ConcavePolygon.h  GameState.cpp  GameState.h  GameWindow.cpp  GameWindow.h  GameWindowOpenGL.cpp  GameWindowOpenGL.h  ImGuiRenderer.cpp  QtImGui.cpp  QtImGui.h  README.md  RasterWindow.cpp  RasterWindow.h  RasterWindowOpenGL.cpp  RasterWindowOpenGL.h  ball_fragment.glsl  base_fragment.glsl  base_vertex.glsl  data_polygons.cpp  data_polygons.h  decompose_polygons.cpp  decompose_polygons.h  extract_polygons.cpp  extract_polygons.h  fragment.glsl  level1.json  levels.json  load_levels.cpp  load_levels.h  logo.blend  main.cpp  main_fragment.glsl  particle_fragment.glsl  particle_geometry.glsl  particle_vertex.glsl  (+12 more)
data/images/: images.qrc
data/levels/: levels.json  levels.qrc
data/shaders/: base_vertex.glsl  crate_fragment.glsl  grab_fragment.glsl  main_vertex.glsl  particle_fragment.glsl  particle_geometry.glsl  particle_vertex.glsl  shaders.qrc
data/sounds/: sounds.qrc
imgui_qt/: ImGuiRenderer.cpp
level/: level.json  level.qrc
shader/: base_fragment.glsl  particle_fragment.glsl  particle_vertex.glsl  shader.qrc
sound/: sound.qrc
